# AIOT

./: .gitignore
API & DB/: app.py  post.sh
API & DB/ledControl/: ledControl.ino
Midterm [Car detection]/: DetectObject.py  h5.py  pyproject.toml
Midterm [Car detection]/hardware/: hardware.ino
Midterm [Car detection]/machine learning/: app.py  datas.db  pyproject.toml  requirement.txt  unit_test.py
Midterm [Car detection]/machine learning/machine_learning/: DetectObject.py
Midterm [Car detection]/machine learning/model/: keras_model.h5
Midterm [Car detection]/model/: keras_model.h5  labels.txt
Midterm [Car detection]/templates/: index.html
Midterm [Car detection]/website/: app.vue  nuxt.config.ts  package-lock.json  single-file.html  tailwind.config.js  tsconfig.json
Midterm [Car detection]/website/components/: Footer.vue  Header.vue
Midterm [Car detection]/website/composable/cameraComposable/: style.css  useCamera.ts
Midterm [Car detection]/website/composable/carComposable/: useTables.ts
Midterm [Car detection]/website/layouts/: default.vue
Midterm [Car detection]/website/pages/: index.vue
Midterm [Car detection]/website/pages/camera/: cameraView.vue
Midterm [Car detection]/website/service/UseCamera/: cameraService.ts
Midterm [Car detection]/website/service/UseTables/: serviceCar.ts
Midterm [Car detection]/website/types/cameraType/: cameraType.ts
Midterm [Car detection]/website/types/carTable/: carType.ts
Temperature AI/: anomaly_detection_model.pkl  app.py  sensor_data.db
Turn on LED flask/: app.py
Weather/: app.py
(+10 files in other folders)
