[project]
name = "myproject"
version = "0.1.0"
description = ""
authors = [
    {name = "TopSlayer",email = "118892404+Top-Slayer@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tensorflow==1.12.0",
    "numpy==1.23.5",
    "pillow==11.1.0",
    "keras==2.12.0",
    "tabulate==0.9.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
